[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-data-test-tool"
version = "1.0.0"
description = "一个用于批量处理数据并发送HTTP请求的Python工具包"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "zzti-bsj", email = "otnw_bsj@163.com"},
]
keywords = ["data-processing", "http-requests", "batch-testing", "jupyter", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: Jupyter",
]
dependencies = [
    "pydantic",
    "pandas",
    "numpy",
    "requests",
    "json-repair",
    "openpyxl",
    "ipywidgets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/zzti-bsj/batch-data-test-tool"
Repository = "https://github.com/zzti-bsj/batch-data-test-tool"
Documentation = "https://github.com/zzti-bsj/batch-data-test-tool#readme"
"Bug Tracker" = "https://github.com/zzti-bsj/batch-data-test-tool/issues"

[project.scripts]
batch-test-tool = "batch_data_test_tool.apps.simple_start:simple_start"

[tool.setuptools.packages.find]
where = ["."]
include = ["batch_data_test_tool*"]

[tool.setuptools.package-data]
batch_data_test_tool = ["*.py", "*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
